--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,4 +1,4 @@
-ul {
+.HowitWorks-section ul {
   --col-gap: 2rem;
   --row-gap: 2rem;
   --line-w: 0.25rem;
@@ -12,7 +12,7 @@ ul {
 }
 
 /* line */
-ul::before {
+.HowitWorks-section ul::before {
   content: "";
   grid-column: 1;
   grid-row: 1 / span 20;
@@ -23,12 +23,12 @@ ul::before {
 /* columns*/
 
 /* row gaps */
-ul li:not(:last-child) {
+.HowitWorks-section ul li:not(:last-child) {
   margin-bottom: var(--row-gap);
 }
 
 /* card */
-ul li {
+.HowitWorks-section ul li {
   grid-column: 2;
   --inlineP: 1.5rem;
   margin-inline: var(--inlineP);
@@ -38,7 +38,7 @@ ul li {
 }
 
 /* date */
-ul li .date {
+.HowitWorks-section ul li .date {
   --dateH: 3rem;
   height: var(--dateH);
   margin-inline: calc(var(--inlineP) * -1);
@@ -58,7 +58,7 @@ ul li .date {
 }
 
 /* date flap */
-ul li .date::before {
+.HowitWorks-section ul li .date::before {
   content: "";
   width: var(--inlineP);
   aspect-ratio: 1;
@@ -72,7 +72,7 @@ ul li .date::before {
 }
 
 /* circle */
-ul li .date::after {
+.HowitWorks-section ul li .date::after {
   content: "";
   position: absolute;
   width: 2rem;
@@ -87,19 +87,19 @@ ul li .date::after {
 }
 
 /* title descr */
-ul li .title,
-ul li .descr {
+.HowitWorks-section ul li .title,
+.HowitWorks-section ul li .descr {
   background: var(--bgColor);
   position: relative;
   padding-inline: 1.5rem;
 }
-ul li .title {
+.HowitWorks-section ul li .title {
   overflow: hidden;
   padding-block-start: 1.5rem;
   padding-block-end: 1rem;
   font-weight: 500;
 }
-ul li .descr {
+.HowitWorks-section ul li .descr {
   padding-block-end: 1.5rem;
   font-weight: 300;
 }
@@ -117,44 +117,44 @@ ul li .descr::before {
   filter: blur(4px);
   transform: translate(-50%, 50%);
 } */
-ul li .title::before {
+.HowitWorks-section ul li .title::before {
   bottom: calc(100% + 0.125rem);
 }
 
-ul li .descr::before {
+.HowitWorks-section ul li .descr::before {
   z-index: -1;
   bottom: 0.25rem;
 }
 
 @media (min-width: 40rem) {
-  ul {
+  .HowitWorks-section ul {
     grid-template-columns: 1fr var(--line-w) 1fr;
   }
-  ul::before {
+  .HowitWorks-section ul::before {
     grid-column: 2;
   }
-  ul li:nth-child(odd) {
+  .HowitWorks-section ul li:nth-child(odd) {
     grid-column: 1;
   }
-  ul li:nth-child(even) {
+  .HowitWorks-section ul li:nth-child(even) {
     grid-column: 3;
   }
 
   /* start second card */
-  ul li:nth-child(2) {
+  .HowitWorks-section ul li:nth-child(2) {
     grid-row: 2/4;
   }
 
-  ul li:nth-child(odd) .date::before {
+  .HowitWorks-section ul li:nth-child(odd) .date::before {
     clip-path: polygon(0 0, 100% 0, 100% 100%);
     left: 0;
   }
 
-  ul li:nth-child(odd) .date::after {
+  .HowitWorks-section ul li:nth-child(odd) .date::after {
     transform: translate(-50%, -50%);
     left: calc(100% + var(--col-gap) + var(--line-w) / 2);
   }
-  ul li:nth-child(odd) .date {
+  .HowitWorks-section ul li:nth-child(odd) .date {
     border-radius: 0 calc(var(--dateH) / 2) calc(var(--dateH) / 2) 0;
   }
 }
