--- a/css/style.css
+++ b/css/style.css
@@ -10409,6 +10409,11 @@ a.text-dark:focus {
 .deltape-page-body-content {
   padding-top: 90px;
 }
+.our-solutions-sec h6 {
+  font-weight: 800;
+  color: #000;
+  font-size: 20px;
+}
 @media screen and (min-width: 769px) {
   .dropend:hover > .dropdown-menu {
     position: absolute;
