--- a/css/mobile.css
+++ b/css/mobile.css
@@ -10,10 +10,10 @@
   .Solutions-con1-right {
     width: 100%;
   }
-  .Solutions-con1-left img,
-  .Solutions-con1-right img {
+  .Solutions-con1-left > img,
+  .Solutions-con1-right > img {
     max-width: 100%;
-    height: 100px;
+    height: 150px;
     width: 130px;
     margin: auto;
     margin-top: 16px;
@@ -72,5 +72,36 @@
   .main-img-sec {
     max-width: 100%;
     width: 100%;
+  }
+  .main-new-content-sec h5 {
+    font-size: 34px;
+    line-height: 40px;
+  }
+  .words.words-1 {
+    display: inline-grid;
+  }
+  .main-new-content-sec p {
+    margin-top: 40px;
+  }
+  .content-sec-image-new-auto {
+    display: block;
+  }
+  .content-sec-image-new-right {
+    margin-top: 20px;
+  }
+  .Benefits-for-Parents-sec-con-left {
+    grid-template-columns: 1fr;
+  }
+  .contact-us-section-con > div {
+    width: 100%;
+  }
+  .contact-us-section-con {
+    display: block;
+  }
+  .contact-us-section-right {
+    margin-top: 20px;
+  }
+  .Our-Solutions-con {
+    width: 90%;
   }
 }
